New in v0.13.2 (??????????)
---------------------------

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)


New in v0.13.1 (2003/08/08)
---------------------------

Restore of archives made by 0.10.x and earlier fixed, although hard
link information is not restored unless it is current in the mirror.
(Bug reported by Jeff Lessem.)

Fixed problem with door files locally when repository is remote.
(Reported by Robert Weber.)

Patch by Jeffrey Marshall fixes socket/fifo recognition on Mac OS X
(which apparently has buggy macros).

Patch by Jeffrey Marshall fixes --calculate-average mode, which seems
to have broken recently.

rdiff-backup should now work and build with python 2.3.  Thanks to
Arkadiusz Miskiewicz and Arkadiusz Patyk for bug reports and a patch.

rdiff-backup now builds and requires librsync 0.9.6.  This version
should be much better than the old one and everyone should probably
upgrade.  Much thanks to Donovan Baarda for all the work that went
into this release.


New in v0.13.0 (2003/07/22)
---------------------------

To prevent the buildup of confusing and error-prone options, the
capabilities of the source and destination file systems are now
autodetected.  Detected features include allowed characters, extended
attributes, access control lists, hard links, ownership, and directory
fsyncing.  Options such as --windows-mode, --chars-to-quote,
--quoting-char, and --windows-restore-mode have been removed.

Now rdiff-backup supports user extended attributes (EAs).  To take
advantage of this you will need the python module pyxattr and a file
system that supports EAs.  Thanks to Greg Freemyer for valuable
discussion.

Support for access control lists (ACLs) was also added.  An ACL
capable file system and the python package pylibacl (which exports the
posix1e module) are required.  Thanks to Greg Freemyer for valuable
discussion.

Thanks to patches by Daniel Hazelbaker, rdiff-backup now reads and